--- a/chn.html
+++ b/chn.html
@@ -31,31 +31,31 @@
 				<section id="header" class="skel-layers-fixed">
 					<header>
 							<span class="image avatar"><img src="images/icon3.jpg" alt="" /></span>
-					        <h1 id="logo">Jiaxin Zhang</h1>
+					        <h1 id="logo">张家馨</h1>
 						<p><a href=mailto:jiaxin@bu.edu>jiaxin@bu.edu</a></p>
-						<a href=https://www.linkedin.com/in/jiaxin-zhang-46079613b title="LinkedIn" target="_blank" class="fa fa-linkedin-square fa-lg" aria-hidden="true" >&nbsp</a>
+						<a href=https://www.linkedin.com/in/jiaxin-zhang-46079613b title="领英" target="_blank" class="fa fa-linkedin-square fa-lg" aria-hidden="true" >&nbsp</a>
 						<a href=https://github.com/manymuch title="GitHub" target="_blank" class="fa fa-github fa-lg" aria-hidden="true" >&nbsp</a>
-						<a href=images/wechet.png title="Wechat" target="_blank" class="fa fa-weixin fa-lg" aria-hidden="true" >&nbsp</a>
-						<a href=download/Resume_JiaxinZhang.pdf title="Resume" target="_blank" class="fa fa-file-text fa-lg" aria-hidden="true" ></a>
+						<a href=images/wechet.png title="微信" target="_blank" class="fa fa-weixin fa-lg" aria-hidden="true" >&nbsp</a>
+						<a href=download/Resume_JiaxinZhang.pdf title="简历" target="_blank" class="fa fa-file-text fa-lg" aria-hidden="true" ></a>
 
 
 					</header>
 					<nav id="nav">
 						<ul>
 		<li><a href="#one"class="active">
-				Education
+			教育经历
 		</a></li>
 
 		<li><a href="#two">
-			Skills
+			相关技能
 		</a></li>
 
 		<li><a href="#three">
-			Projects
+			项目经历
 		</a></li>
 
 		<li><a href="#four">
-			Experience
+			交流经历
 		</a></li>
 
 		<li><a href="https://manymuch.github.io">English</a></li>
@@ -70,15 +70,15 @@
 						<section id="one">
 							<div class="container">
 								<header class="major" id="#one">
-									<h2>Education</h2>
+									<h2>教育经历</h2>
                 </header>
 								<div>
 									<div style = "float: left">
 										<strong>
-										Boston University
+										波士顿大学
 										</strong>
 									</div>
-									<div style = "float: right">Sept.2018-May.2020</div>
+									<div style = "float: right">2018年9月-2020年5月</div>
 								</div>
 								<br>
 								<div style="text-indent: 2em;">
@@ -88,23 +88,23 @@
 								Robotics Specialization
 								</div>
 								<div style="text-indent: 2em;">
-									Current GPA: 3.8/4.0 <a href = "download/BU_Transcript.pdf">Transcript</a>
+									GPA: 3.8/4.0 <a href = "download/BU_Transcript.pdf">成绩单</a>
 								</div>
 								<br>
 								<div>
 									<div style = "float: left">
 										<strong>
-										University of Science and Technology of China
+										中国科学技术大学
 										</strong>
 									</div>
-									<div style = "float: right">Sept.2014-Jul.2018</div>
+									<div style = "float: right">2014年9月-2018年7月</div>
 									<br>
 								</div>
 								<div style="text-indent: 2em;">
-								Bachelor of Science in Physical Electronics
+								少年班学院
 								</div>
 								<div style="text-indent: 2em;">
-								School of the Gifted Young
+								物理电子学
 								</div>
 							</div>
 							</section>
@@ -113,32 +113,32 @@
 						<section id="two">
 							<div class="container">
 							<header class="major" id="#one2">
-							  <h2>Skills</h2>
+							  <h2>相关技能</h2>
 						   </header>
 							 <div class="major">
 								 <div>
 									 <strong>
-									 Programming Languages:
+									 编程语言:
 									 </strong>
 									 Python, C/C++, MATLAB, Mathematica, LabVIEW
 								 </div>
 								 <div>
 									 <strong>
-									 Frameworks:
+									 框架:
 									 </strong>
 									 ROS, PCL, OpenCV
 								 </div>
 								 <div>
 									 <strong>
-									 Tools:
+									 工具:
 									 </strong>
-									 Git, Makefile, Xilinx SDSoC and VivadoHLS
+									 Git, Makefile, 赛灵思 SDSoC and VivadoHLS
 								 </div>
 								 <div>
 									 <strong>
-									 Developing Experience:
+									 开发经验:
 									 </strong>
-									 ARM Cortex-M4 based on Kinetis K60, Xilinx ZedBoard
+									 ARM Cortex-M4 based on Kinetis K60, 赛灵思 ZedBoard
 								 </div>
 							 </div>
 
@@ -152,7 +152,7 @@
 				  <section id="three">
 				    <div class="container">
 				      <header class="major" id="#one3">
-				        <h2>Projects</h2>
+				        <h2>项目经历</h2>
 			         </header>
 							<div class="features">
 									<article>
@@ -175,7 +175,7 @@
 										<h5 align="center">Energy Efficiency</h5>
 										</a>
 											    <div class="inner">
-											      <h4 title=" Spring 2018"> FPGA based BNN Acceleration </h4>
+											      <h4 title=" Spring 2018"> 基于FPGA的神经网络加速 </h4>
 
 													<ul>
 									  					<li>Implemented Binarized Convolutional Neural Networks(BNN) in a FPGA device(Xilinx ZedBoard).</li>
@@ -190,7 +190,7 @@
 										</a>
 
 											    <div class="inner">
-											      <h4 title="Summer 2017">Binarization of Generators</h4>
+											      <h4 title="Summer 2017">二值化神经网络的研究(GANs)</h4>
 
 													<ul>
 									  					<li>Explored and designed Partial Binarized algorithm for Deconvolution-Based Generators.</li>
@@ -205,7 +205,7 @@
 										<a href="#" class="image"><img src="images/eye_tracking.gif" alt=""/>
 										</a>
 											    <div class="inner">
-											      <h4 title="2015-2016">Eye Tracking System</h4>
+											      <h4 title="2015年-2016年">眼动跟踪系统</h4>
 
 													<ul>
 									  					<li>Designed and built a system with helmet, Lidar and camera that track the user’s gaze point.</li>
@@ -220,7 +220,7 @@
 									<article>
 										<a href="#" class="image"><img src="images/mendocino.gif" alt="" width="118%" /></a>
 										<div class="inner">
-											<h4 title="Spring 2015">Mendocino Motor</h4>
+											<h4 title="Spring 2015">门多西诺电机</h4>
 
 											 		<ul>
 									  					<li>Built a Mendocino Motor with self-designed 3D printed parts.</li>
@@ -234,7 +234,7 @@
 																	  <h5 style="color:#5F82B5">Blue Line: theoritical estimation</h5>
 																	  <h5 style="color: #FF0000">Red Dots: real data</h5></a>
 																    <div class="inner">
-																      <h4 title="Spring 2015">Coilgun Simulating</h4>
+																      <h4 title="Spring 2015">高斯枪速度数值模拟</h4>
 
 											 		<ul>
 									  					<li>Built the physical model for a mutil-level induction coilgun</li>
@@ -251,7 +251,7 @@
 					<section id="four">
 							<div class="container">
 							  <header class="major" id="#one4">
-							    <h2>Experience</h2>
+							    <h2>交流经历</h2>
 							  </header>
 								<div class="major">
 									<div style = "float: left">
