--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										Boston University
 										</strong>
 									</div>
-									<div style = "float: right">Sept.2018-May.2020</div>
+									<div style = "float: right">Sept.2018 - May 2020</div>
 								</div>
 								<br>
 								<div style="text-indent: 2em;">
@@ -88,7 +88,7 @@
 								Robotics Specialization
 								</div>
 								<div style="text-indent: 2em;">
-									Current GPA: 3.8/4.0 <a href = "download/BU_Transcript.pdf">Transcript</a>
+									Current GPA: 3.8/4.0 <a target="_blank" href = "download/BU_Transcript.pdf">Transcript</a>
 								</div>
 								<br>
 								<div>
@@ -97,7 +97,7 @@
 										University of Science and Technology of China
 										</strong>
 									</div>
-									<div style = "float: right">Sept.2014-Jul.2018</div>
+									<div style = "float: right">Sept.2014 - Jul.2018</div>
 									<br>
 								</div>
 								<div style="text-indent: 2em;">
@@ -195,8 +195,7 @@
 													<ul>
 									  					<li>Explored and designed Partial Binarized algorithm for Deconvolution-Based Generators.</li>
 									  					<li>Achieved 25x saving in memory and 1.9x speed up with little performance loss.</li>
-									  					<li>Published as second author.</li>
-															<li><a href="https://arxiv.org/pdf/1802.09153.pdf" target="_blank">Click here to see the paper</a></li>
+									  					<li>Published as second author <a href=https://arxiv.org/pdf/1802.09153.pdf" title="PDF paper" target="_blank" class="fa fa-file-pdf-o fa-lg" aria-hidden="true" ></a></li>
 													</ul>
 
 												</div>
@@ -267,7 +266,6 @@
 									<ur>
 										<li>Explored and designed Binarized algorithm for Deconvolution-Based Generators. </li>
 										<li>Implemented and processed all experiments data.</li>
-										<li><a href="https://arxiv.org/pdf/1802.09153.pdf" target="_blank">Click here to see the paper</a></li>
 									</ur>
 								</div>
 								<br>
