--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 			         </header>
 							<div class="features">
 									<article>
-										<a href="#" class="image"><img src="images/arm_control.png" alt=""/>
+										<a class="image"><img src="images/arm_control.png" alt=""/>
 										<h5 align="center">Segementation using PointNet</h5>
 										</a>
 											    <div class="inner">
@@ -171,7 +171,7 @@
 												</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/fpga.gif" alt=""/>
+										<a class="image"><img src="images/fpga.gif" alt=""/>
 										<h5 align="center">Energy Efficiency</h5>
 										</a>
 											    <div class="inner">
@@ -201,7 +201,7 @@
 												</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/eye_tracking.gif" alt=""/>
+										<a class="image"><img src="images/eye_tracking.gif" alt=""/>
 										</a>
 											    <div class="inner">
 											      <h4 title="2015-2016">Eye Tracking System</h4>
@@ -217,7 +217,7 @@
 												</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/mendocino.gif" alt="" width="118%" /></a>
+										<a class="image"><img src="images/mendocino.gif" alt="" width="118%" /></a>
 										<div class="inner">
 											<h4 title="Spring 2015">Mendocino Motor</h4>
 
@@ -229,7 +229,7 @@
 									   </div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/gaussgun.png" alt="" />
+										<a class="image"><img src="images/gaussgun.png" alt="" />
 																	  <h5 style="color:#5F82B5">Blue Line: theoritical estimation</h5>
 																	  <h5 style="color: #FF0000">Red Dots: real data</h5></a>
 																    <div class="inner">
