--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 										<a class="image"><img src="images/loss.png" alt=""/>
 										</a>
 
-											    <div class="inner">
+											    <div id="gan" class="inner">
 											      <h4 title="Summer 2017">Binarization of Generators</h4>
 
 													<ul>
@@ -265,6 +265,7 @@
 									<ur>
 										<li>Explored and designed Binarized algorithm for Deconvolution-Based Generators. </li>
 										<li>Implemented and processed all experiments data.</li>
+										<li>See <a href="#gan">Binarization of Generators</a>.</li>
 									</ur>
 								</div>
 								<br>
@@ -304,10 +305,6 @@
 								</div>
 							</div>
 						</section>
-
-			<!-- Footer -->
-				<section id="footer"></section>
-
 		</div>
 	</body>
 </html>
