--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 									  					<li>Implemented PCL and PointNet to process point cloud data for semantic segmentation.</li>
 									  					<li>Implemented motion planning and control for the robot with Moveit.</li>
 									  					<li>Integrated Alexa interface that allowed users to control Robotic Arm with their voice.</li>
+															<li>See demo video here <a href="https://youtu.be/ml04Gt5j70s" title="Demo Video" target="_blank" class="fa fa-youtube-play fa-lg" aria-hidden="true" ></a></li>
 													</ul>
 
 												</div>
