remove transcript link

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								Robotics Specialization
 								</div>
 								<div style="text-indent: 2em;">
-									Current GPA: 3.8/4.0 <a target="_blank" href = "download/BU_Transcript.pdf">Transcript</a>
+									Current GPA: 3.8/4.0
 								</div>
 								<br>
 								<div>
