--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>Jiaxin Zhang</title>
+		<link rel="icon" href="images/icon.ico" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<meta name="description" content="Jiaxin Zhang homepage" />
+		<meta name="keywords" content="Jiaxin" />
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrollzer.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
@@ -29,10 +29,12 @@
 					<header>
 							<span class="image avatar"><img src="images/icon3.jpg" alt="" /></span>
 					        <h1 id="logo">Jiaxin Zhang</h1>
-						<p><a class="email" href=mailto:jiaxin@bu.edu> jiaxin@bu.edu</a>
-						<br>
-						<a class="phone" title="Cell Phone"> 617-459-0876</a>
-						</p>
+						<li style="list-style-type:none;">
+							<a class="email" href=mailto:jiaxin@bu.edu> jiaxin@bu.edu</a>
+						</li>
+						<li style="list-style-type:none;">
+							 <a class="phone" title="Cell Phone"> 617-459-0876</a>
+					 </li>
 						<a href=https://www.linkedin.com/in/jiaxin-zhang-46079613b title="LinkedIn" target="_blank" class="fa fa-linkedin-square fa-lg" aria-hidden="true" >&nbsp</a>
 						<a href=https://github.com/manymuch title="GitHub" target="_blank" class="fa fa-github fa-lg" aria-hidden="true" >&nbsp</a>
 						<a href="# "id="contact_weixin" onclick="openWindow(this)" title="Wechat" class="fa fa-weixin fa-lg" aria-hidden="true" >&nbsp</a>
