--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
-		<script src="js/popup.js"></script>
+		<script src="js/wechat.js"></script>
 	<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -37,9 +37,11 @@
 					 </li>
 						<a href=https://www.linkedin.com/in/jiaxin-zhang-46079613b title="LinkedIn" target="_blank" class="fa fa-linkedin-square fa-lg" aria-hidden="true" >&nbsp</a>
 						<a href=https://github.com/manymuch title="GitHub" target="_blank" class="fa fa-github fa-lg" aria-hidden="true" >&nbsp</a>
-						<a href="# "id="contact_weixin" onclick="openWindow(this)" title="Wechat" class="fa fa-weixin fa-lg" aria-hidden="true" >&nbsp</a>
+						<a href="javascript:void(0)" onMouseOut="hideImg()"  onmouseover="showImg()" class="fa fa-weixin fa-lg" aria-hidden="true" >&nbsp</a>
 						<a href=download/JiaxinZhang_Resume.pdf title="Resume" target="_blank" class="fa fa-file-text fa-lg" aria-hidden="true" ></a>
-
+						<div id="wxImg" style="display:none;height:50px;back-ground:#f00;position: absolute;z-index:9999">
+										<span><img src="images\wechet.png" width="200" height="200" border="0" alt=""></span>
+						</div>
 
 					</header>
 					<nav id="nav">
@@ -66,14 +68,6 @@
 				</section>
 
 			<!-- Main -->
-				<div id="main">
-					<div id="light_qq" class="white_content">
-					    <img src='images/wechet.png' />
-					</div>
-					<div id="light_weixin" class="white_content">
-					    <img src='images/wechet.png' />
-					</div>
-					<div id="fade" class="black_overlay"  onClick="closeWindow()"></div>
 					<!-- One -->
 						<section id="one">
 							<div class="container">
@@ -116,6 +110,16 @@
 								</div>
 							</div>
 							</section>
+
+
+
+
+
+
+
+
+
+
 
 					<!-- Two -->
 						<section id="two">
