--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 				</section>
 
 			<!-- Main -->
+			<div id="main">
 					<!-- One -->
 						<section id="one">
 							<div class="container">
@@ -110,16 +111,6 @@
 								</div>
 							</div>
 							</section>
-
-
-
-
-
-
-
-
-
-
 
 					<!-- Two -->
 						<section id="two">
@@ -315,7 +306,7 @@
 								<br>
 								<div style="text-indent: 2em;">
 									<ur>
-										<li>Exchange Students in Department of Physics, <a href="download/NTHU.pdf" target="_blank">See Transcript</a></li>
+										<li>Exchange Students in Department of Physics</li>
 										<li>Conducted experiments and explored modelling for paper twisting patterns. </li>
 									</ur>
 								</div>
