--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<a class="email" href=mailto:jiaxin@bu.edu> jiaxin@bu.edu</a>
 						</li>
 						<li style="list-style-type:none;">
-							 <a class="phone" title="Cell Phone"> 617-459-0876</a>
+							 <a class="phone" title="Cell Phone"> (617) 459-0876</a>
 					 </li>
 						<a href=https://www.linkedin.com/in/jiaxin-zhang-46079613b title="LinkedIn" target="_blank" class="fa fa-linkedin-square fa-lg" aria-hidden="true" >&nbsp</a>
 						<a href=https://github.com/manymuch title="GitHub" target="_blank" class="fa fa-github fa-lg" aria-hidden="true" >&nbsp</a>
